EP-122 - make sure in-page scrolling does not get hidden behind stocky header

--- a/public/theme/europeana-cope/source/scss/modules/_typography.scss
+++ b/public/theme/europeana-cope/source/scss/modules/_typography.scss
@@ -744,3 +744,8 @@ code, pre {
         background-color: $white;
     }
 }
+
+// make the scrolling snap to the right place -> https://css-tricks.com/fixed-headers-and-jump-links-the-solution-is-scroll-margin-top/
+a.in-page-anchor {
+    scroll-margin-top: 4em;
+}
